--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 
                 const popup = new mapboxgl.Popup({ offset: 25 }).setHTML(
                 
-                    '<h3>'+data.features[i].properties.Location_Type+'</h3>
-                     <h4>'+data.features[i].properties.Name+' <img src="leaf-nav.png"></h4>'
+                    '<h3>' + data.features[i].properties.Location_Type + '</h3><h4>' +
+                     data.features[i].properties.Name + '<img src="leaf-nav.png"></h4>'
 
                 );
                  
