--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     });
 
     map.addControl(new mapboxgl.AttributionControl({
-      customAttribution: "Mayor's Office of New Urban Mechanics"
+      customAttribution: "OET Boston"
     }));
     
     map.scrollZoom.disable();
