--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     map.on('load', () => {
       map.addSource('gi', {
         type: 'geojson',
-        data: 'gi-locations.geojson'
+        data: 'psi.geojson'
        });
 
     map.addLayer({
