--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 
                 const popup = new mapboxgl.Popup({ offset: 25 }).setHTML(
                 
-                    '<h3>' + data.features[i].properties.location + '</h3><h4>' +
-                     data.features[i].properties.name + '<img src="leaf-nav.png"></h4>'
+                    '<h3>' + data.features[i].properties.name + '</h3><h4>' +
+                     data.features[i].properties.location + '<img src="leaf-nav.png"></h4>'
 
                 );
                  
