Update legend colors and categories in psi.html

--- a/psi.html
+++ b/psi.html
@@ -148,28 +148,28 @@
 <div class="legend">
   <h4>Categories</h4>
   <div class="legend-item">
+    <span class="legend-color" style="background-color: #3D9970;"></span>
+    <span>Green Infrastructure</span>
+  </div>
+  <div class="legend-item">
     <span class="legend-color" style="background-color: #284384;"></span>
     <span>Pop-up Infrastructure</span>
   </div>
   <div class="legend-item">
-    <span class="legend-color" style="background-color: #4e9bb8;"></span>
-    <span>Technology + Participation</span>
+    <span class="legend-color" style="background-color: #ea580c;"></span>
+  <span>Reinventing Infrastructure</span>
   </div>
   <div class="legend-item">
-    <span class="legend-color" style="background-color: #2A644D;"></span>
+    <span class="legend-color" style="background-color: #dc2626;"></span>
     <span>Simple Tools, Simple Materials</span>
   </div>
   <div class="legend-item">
-    <span class="legend-color" style="background-color: #3c8c99;"></span>
+    <span class="legend-color" style="background-color: #a855f7;"></span>
     <span>Storytelling + History</span>
   </div>
   <div class="legend-item">
-    <span class="legend-color" style="background-color: #452d88;"></span>
-    <span>Reinventing Infrastructure</span>
-  </div>
-  <div class="legend-item">
-    <span class="legend-color" style="background-color: #3D9970;"></span>
-    <span>Green Infrastructure</span>
+    <span class="legend-color" style="background-color: #4e9bb8;"></span>
+    <span>Technology + Participation</span>
   </div>
 </div>
 <script>
@@ -192,9 +192,9 @@
       const colors = {
         'Pop-up Infrastructure': '#284384',
         'Technology + Participation': '#4e9bb8',
-        'Simple Tools, Simple Materials': '#2A644D',
-        'Storytelling + History': '#3c8c99',
-        'Reinventing Infrastructure': '#452d88',
+        'Simple Tools, Simple Materials': '#dc2626',
+        'Storytelling + History': '#a855f7',
+        'Reinventing Infrastructure': '#ea580c',
         'Green Infrastructure': '#3D9970'
       };
       return colors[category] || '#666666';
