--- a/psi.html
+++ b/psi.html
@@ -146,7 +146,7 @@
 <body>
 <div id="map"></div>
 <div class="legend">
-  <h4>Categories</h4>
+  <h4>Themes</h4>
   <div class="legend-item">
     <span class="legend-color" style="background-color: #3D9970;"></span>
     <span>Green Infrastructure</span>
