Refactor getCategoryColor function and update colors

--- a/psi.html
+++ b/psi.html
@@ -188,25 +188,13 @@
     };
 
     // Category color mapping
-    /*function getCategoryColor(category) {
+    function getCategoryColor(category) {
       const colors = {
-        'Pop-up Infrastructure': '#284384',
+        'Pop-up Infrastructure': '#3b5998',  // brighter, more saturated blue
         'Technology + Participation': '#4e9bb8',
         'Simple Tools, Simple Materials': '#dc2626',
         'Storytelling + History': '#a855f7',
         'Reinventing Infrastructure': '#ea580c',
-        'Green Infrastructure': '#3D9970'
-      };
-      return colors[category] || '#666666';
-    }*/
-
-  function getCategoryColor(category) {
-      const colors = {
-        'Pop-up Infrastructure': '#423D99',
-        'Technology + Participation': '#3D9299',
-        'Simple Tools, Simple Materials': '#94993D',
-        'Storytelling + History': '#993D66',
-        'Reinventing Infrastructure': '#993D3D',
         'Green Infrastructure': '#3D9970'
       };
       return colors[category] || '#666666';
