Update category colors in psi.html

--- a/psi.html
+++ b/psi.html
@@ -190,12 +190,12 @@
     // Category color mapping
     function getCategoryColor(category) {
       const colors = {
-        'Pop-up Infrastructure': '#3b5998',  // brighter, more saturated blue
+        'Pop-up Infrastructure': '#3b5998',
         'Technology + Participation': '#4e9bb8',
         'Simple Tools, Simple Materials': '#dc2626',
         'Storytelling + History': '#a855f7',
         'Reinventing Infrastructure': '#ea580c',
-        'Green Infrastructure': '#3D9970'
+        'Green Infrastructure': '#16a34a'
       };
       return colors[category] || '#666666';
     }
