Update legend items and category colors in psi.html

--- a/psi.html
+++ b/psi.html
@@ -148,12 +148,16 @@
 <div class="legend">
   <h4>Categories</h4>
   <div class="legend-item">
+    <span class="legend-color" style="background-color: #3D9970;"></span>
+    <span>Green Infrastructure</span>
+  </div>
+  <div class="legend-item">
     <span class="legend-color" style="background-color: #284384;"></span>
     <span>Pop-up Infrastructure</span>
   </div>
-  <div class="legend-item">
-    <span class="legend-color" style="background-color: #4e9bb8;"></span>
-    <span>Technology + Participation</span>
+    <div class="legend-item">
+    <span class="legend-color" style="background-color: #ea580c;"></span>
+    <span>Reinventing Infrastructure</span>
   </div>
   <div class="legend-item">
     <span class="legend-color" style="background-color: #dc2626;"></span>
@@ -164,12 +168,8 @@
     <span>Storytelling + History</span>
   </div>
   <div class="legend-item">
-    <span class="legend-color" style="background-color: #ea580c;"></span>
-    <span>Reinventing Infrastructure</span>
-  </div>
-  <div class="legend-item">
-    <span class="legend-color" style="background-color: #3D9970;"></span>
-    <span>Green Infrastructure</span>
+    <span class="legend-color" style="background-color: #4e9bb8;"></span>
+    <span>Technology + Participation</span>
   </div>
 </div>
 <script>
@@ -189,14 +189,14 @@
 
     // Category color mapping
     function getCategoryColor(category) {
-      const colors = {
-        'Pop-up Infrastructure': '#3b5998',  // brighter, more saturated blue
-        'Technology + Participation': '#4e9bb8',
-        'Simple Tools, Simple Materials': '#dc2626',
-        'Storytelling + History': '#a855f7',
-        'Reinventing Infrastructure': '#ea580c',
-        'Green Infrastructure': '#3D9970'
-      };
+const colors = {
+  'Pop-up Infrastructure': '#3b5998',  // brighter blue
+  'Technology + Participation': '#4e9bb8',
+  'Simple Tools, Simple Materials': '#dc2626',
+  'Storytelling + History': '#a855f7',
+  'Reinventing Infrastructure': '#ea580c',
+  'Green Infrastructure': '#16a34a'  // brighter, more saturated green
+};
       return colors[category] || '#666666';
     }
 
