--- a/psi.html
+++ b/psi.html
@@ -189,14 +189,14 @@
 
     // Category color mapping
     function getCategoryColor(category) {
-const colors = {
-  'Pop-up Infrastructure': '#3b5998',  // brighter blue
-  'Technology + Participation': '#4e9bb8',
-  'Simple Tools, Simple Materials': '#dc2626',
-  'Storytelling + History': '#a855f7',
-  'Reinventing Infrastructure': '#ea580c',
-  'Green Infrastructure': '#16a34a'  // brighter, more saturated green
-};
+      const colors = {
+        'Pop-up Infrastructure': '#3b5998',
+        'Technology + Participation': '#4e9bb8',
+        'Simple Tools, Simple Materials': '#dc2626',
+        'Storytelling + History': '#a855f7',
+        'Reinventing Infrastructure': '#ea580c',
+        'Green Infrastructure': '#2e8b57'
+      };
       return colors[category] || '#666666';
     }
 
